--- a/.github/workflows/build-arch-arm.yaml
+++ b/.github/workflows/build-arch-arm.yaml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+
+      - name: Maximize Build Space
+        uses: easimon/maximize-build-space@v10
+        with:
+          root-reserve-mb: 2048
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+
       - name: Install Dependencies
         run: |
           sudo apt-get update
@@ -30,6 +40,7 @@ jobs:
           export CROSS_COMPILE=aarch64-linux-gnu-
           make qcom_laptops.config defconfig
           make -j$(nproc) Image modules dtbs
+          find . -name "*.o" -type f -delete
           cd ..
 
       - name: Prepare RootFS and Image
